--- a/MemeMe_App/Info.plist
+++ b/MemeMe_App/Info.plist
@@ -2,12 +2,6 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Living in a Ghosttown</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>In-a-gadda-da-vida</string>
-	<key>NSPhotoLibraryAddUsageDescription</key>
-	<string>Es geht eine Träne auf Reisen</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>$(DEVELOPMENT_LANGUAGE)</string>
 	<key>CFBundleExecutable</key>
@@ -24,6 +18,12 @@
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Living in a Ghosttown</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Es geht eine Träne auf Reisen</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>In-a-gadda-da-vida</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
@@ -58,6 +58,7 @@
 		<string>UIInterfaceOrientationPortrait</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
